# snek

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  menu notes
.cache/clangd/index/: algorithms.cpp.AC66F70FA517A79E.idx  algorithms.hpp.1293CD3FA37B2967.idx  calcTools.cpp.0CCBE6E535F9353C.idx  calcTools.hpp.13F4E93579626559.idx  conTools.cpp.BE38A3178D591C8C.idx  conTools.hpp.F851020911377A7B.idx  menu.cpp.DEFBAA1BA5DC8465.idx  menu.hpp.B0DE941334C88B34.idx  snake.cpp.054167EBAF54FA12.idx  snek.cpp.8F9A6CB868ECCF58.idx  terminal.h.5FED03F7BBAC28A9.idx  terminal_base.h.51BFD15E6D3799D9.idx  timeTools.cpp.FF94B2BEB5FEE5AA.idx  timeTools.hpp.659D4913360619DB.idx  visual.cpp.809C994644CBEE88.idx  visual.hpp.11974F26D06AE4B4.idx
.ci/: compile.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-format-check.yml  codeql-analysis.yml  test-linux.yml  test-macos.yml  test-windows.yml
dependencies/: CMakeLists.txt
frontend/: CMakeLists.txt  snek-standalone.cpp  snek.cpp
menu/: CMakeLists.txt  menu.cpp  menu.hpp  visual.cpp  visual.hpp
snake/: CMakeLists.txt  info.hpp.in  notes  snake.cpp  snake.hpp
src/: animation.cpp  animation.hpp  engine.cpp  engine.h  frontend-debug.cpp  frontend-release.cpp  information.hpp.in  main.cpp  menu notes  menu.cpp  menu.hpp  snake.cpp  snake.h  snake.hpp  snakeAdditions.cpp  utils.cpp  utils.h  utils.hpp  visual.cpp  visual.hpp
src-old/: frontend-debug.cpp  snake.hpp
